# MailScheduler

./: .env.example  .gitignore  README.md  data.json  manage.py  pyproject.toml
blog/: admin.py  models.py  services.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: article_detail.html  article_list.html
mailing/: admin.py  apps.py  forms.py  mixins.py  models.py  urls.py  utils.py  views.py
mailing/management/commands/: send_mail.py
mailing/migrations/: 0001_initial.py  0002_remove_client_avatar.py  0003_rename_distribution_mailing_and_more.py  0004_alter_mailing_clients.py  0005_alter_mailingattempt_options_and_more.py  0006_mailing_is_active_alter_mailing_status.py  0007_rename_first_send_time_mailing_send_time.py  0008_client_owner_mailing_owner_message_owner.py  0009_alter_mailing_send_time.py  0010_alter_mailing_options.py  0011_alter_client_email.py
mailing/services/: mailing_service.py  scheduler.py
mailing/templates/: base.html
mailing/templates/mailing/: client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  index.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  mailingattempt_list.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html
mailscheduler/: asgi.py  settings.py  urls.py  wsgi.py
users/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py  0002_user_token.py  0003_alter_user_options.py
users/templatetags/: perm_tag.py
(+11 files in other folders)
